--- a/src/components/_spacing.scss
+++ b/src/components/_spacing.scss
@@ -19,7 +19,7 @@ $spacer: $line-height-computed;
 .m-r-0 {
   margin-right: 0 !important;
 }
-.m-t-0 {
+.m-b-0 {
   margin-bottom: 0 !important;
 }
 .m-l-0 {
@@ -45,7 +45,7 @@ $spacer: $line-height-computed;
 .m-r-1 {
   margin-right: $spacer !important;
 }
-.m-t-1 {
+.m-b-1 {
   margin-bottom: $spacer !important;
 }
 .m-l-1 {
@@ -71,7 +71,7 @@ $spacer: $line-height-computed;
 .p-r-0 {
   padding-right: 0 !important;
 }
-.p-t-0 {
+.p-b-0 {
   padding-bottom: 0 !important;
 }
 .p-l-0 {
@@ -97,7 +97,7 @@ $spacer: $line-height-computed;
 .p-r-1 {
   padding-right: $spacer !important;
 }
-.p-t-1 {
+.p-b-1 {
   padding-bottom: $spacer !important;
 }
 .p-l-1 {
